--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Hello World</h1>
+    <h3>Hello test</h3>
     <form action='/articles/' method='GET'>
       <input type='text' name='q'/>
       <input type='submit' />
