--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Hello World</h1>
     <h3>Hello test</h3>
-    <p>This did not upload to git.</p>
+    <p>Cant get on git</p>
     <form action='/articles/' method='GET'>
       <input type='text' name='q'/>
       <input type='submit' />
