--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <h1>Hello World</h1>
     <h3>Hello test</h3>
     <p>Cant get on git</p>
+    <p>Final change, yeah right lol</p>
     <form action='/articles/' method='GET'>
       <input type='text' name='q'/>
       <input type='submit' />
