--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,8 @@
 	<head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="shenkan.dev website">
-    <meta name="author" content="Chris Shenkan chris@shenkan.dev">
+    <meta name="description" content="corpjukdev website">
+    <meta name="author" content="Justin Cunningham justin@corpjuk.dev">
     
     <title>corpjuk.dev</title>    
 	</head>
