setting up search queryset

--- a/templates/home-view.html
+++ b/templates/home-view.html
@@ -5,11 +5,14 @@
 <h1>{{title}}! ({{id}})</h1>
 <p>{{content}}!</p>
 
+
+<a href='{% url "article-create" %}'>Create Article</a>
+<a href='{% url "article-detail" slug="hello-world" %}'>Hello world article</a>
 <ul>
   {% for x in article %}
 </ul>
 {% if x.title %}
-<li><a href='/articles/{{ x.id }}/'>{{x.title }} - {{ x.content }}</a></li>
+<li><a href='{{ x.get_absolute_url }}'>{{x.title }} - {{ x.content }}</a></li>
 
 {% endif %} 
 {% endfor %} 
