--- a/templates/articles/search.html
+++ b/templates/articles/search.html
@@ -2,9 +2,11 @@
 
 {% block content %}
 
-{% if object %}
-<h1>{{ object.title }}</h1>
-<p>{{ object.content }}</p>
-{% endif %}
-
+{% for object in object_list %}
+    {% if object.title %}
+        <h1>{{ object.title }}</h1>
+        <p>{{ object.content }}</p>
+        <p>{{ object.get_absolute_url }}</p>
+    {% endif %}
+{% endfor %}
 {% endblock content %}
