--- a/templates/articles/search.html
+++ b/templates/articles/search.html
@@ -2,11 +2,16 @@
 
 {% block content %}
 
+<ol>
 {% for object in object_list %}
     {% if object.title %}
-        <h1>{{ object.title }}</h1>
+    <li>
+        <a href="{{ object.get_absolute_url }}">{{object.title }}</a>
+    </li>
+        {% comment %} <h1>{{ object.title }}</h1>
         <p>{{ object.content }}</p>
-        <p>{{ object.get_absolute_url }}</p>
+        <p>{{ object.get_absolute_url }}</p> {% endcomment %}
     {% endif %}
 {% endfor %}
+</ol>
 {% endblock content %}
