implemented recipes and ingredients and tests for those models

--- a/templates/home-view.html
+++ b/templates/home-view.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<h1>{{title}}! ({{id}})</h1>
-<p>{{content}}!</p>
+<h1>Eat plants.</h1>
+<p>it's easy.</p>
 
 
 <a href='{% url "article-create" %}'>Create Article</a>
