--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,8 @@
   <body>
     <h1>Hello World</h1>
     <h3>Hello test</h3>
-    <p>Cant get on git</p>
-    <p>Final change, yeah right lol</p>
+    <p>Eat plants only.</p>
+    <p>Let's eat plants, it's easy.</p>
     <form action='/articles/' method='GET'>
       <input type='text' name='q'/>
       <input type='submit' />
