recipes model to prod

--- a/templates/home-view.html
+++ b/templates/home-view.html
@@ -7,6 +7,8 @@
 
 
 <a href='{% url "article-create" %}'>Create Article</a>
+<a href='{% url "articles" %}'>Articles</a>
+<a href='{% url "register" %}'>Register</a>
 <a href='{% url "article-detail" slug="hello-world" %}'>Hello world article</a>
 <ul>
   {% for x in article %}
