--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,11 @@
     <h3>Hello test</h3>
     <p>Eat plants only.</p>
     <p>Let's eat plants, it's easy.</p>
+    <a href='{% url "home" %}'>Home</a>
+    <a href='{% url "articles" %}'>Articles</a>
+    <a href='{% url "register" %}'>Register</a>
+    <a href='{% url "article-create" %}'>Create Article</a>
+    <a href='{% url "article-detail" slug="hello-world" %}'>Hello world article</a>
     <form action='/articles/' method='GET'>
       <input type='text' name='q'/>
       <input type='submit' />
