--- a/templates/home-view.html
+++ b/templates/home-view.html
@@ -6,10 +6,10 @@
 <p>it's easy.</p>
 
 
-<a href='{% url "article-create" %}'>Create Article</a>
+<!-- <a href='{% url "articles:create" %}'>Create Article</a>
 <a href='{% url "articles" %}'>Articles</a>
 <a href='{% url "register" %}'>Register</a>
-<a href='{% url "article-detail" slug="hello-world" %}'>Hello world article</a>
+<a href='{% url "articles:detail" slug="hello-world" %}'>Hello world article</a> -->
 <ul>
   {% for x in article %}
 </ul>
