--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="corpjukdev website">
     <meta name="author" content="Justin Cunningham justin@corpjuk.dev">
-    
+    {% for article in articles %}
+		<div>{{ article.slug }}</div>
+	{% endfor %}
     <title>corpjuk.dev</title>    
 	</head>
 	<body>
