--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
     <a href='{% url "register" %}'>Register</a>
     <a href='{% url "articles:create" %}'>Create Article</a>
     <a href='{% url "articles:detail" slug="hello-world" %}'>Hello world article</a>
+    <a href='{% url "recipes:list" %}'>Recipes</a>
     <form action='/articles/' method='GET'>
       <input type='text' name='q'/>
       <input type='submit' />
