--- a/templates/articles/articles.html
+++ b/templates/articles/articles.html
@@ -6,12 +6,9 @@
 <p>All articles.</p>
 
 
-<!-- <a href='{% url "article-create" %}'>Create Article</a>
-<a href='{% url "articles" %}'>Articles</a>
-<a href='{% url "register" %}'>Register</a>
-<a href='{% url "article-detail" slug="hello-world" %}'>Hello world article</a> -->
+
 <ul>
-  {% for x in article %}
+  {% for x in articles %}
 </ul>
 {% if x.title %}
 <li><a href='{{ x.get_absolute_url }}'>{{x.title }} - {{ x.content }}</a></li>
