--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
     <a href='{% url "articles:create" %}'>Create Article</a>
     <a href='{% url "articles:detail" slug="hello-world" %}'>Hello world article</a>
     <a href='{% url "recipes:list" %}'>Recipes</a>
+    <a href='{% url "recipes:create" %}'>Create Recipes</a>
     <form action='/articles/' method='GET'>
       <input type='text' name='q'/>
       <input type='submit' />
