--- a/templates/base.html
+++ b/templates/base.html
@@ -17,11 +17,16 @@
     <p>Let's eat plants, it's easy.</p>
     <a href='{% url "home" %}'>Home</a>
     <a href='{% url "articles:search" %}'>Articles</a>
-    <a href='{% url "register" %}'>Register</a>
-    <a href='{% url "articles:create" %}'>Create Article</a>
+    
+    {% comment %}
+    This is an href example calling articles object
     <a href='{% url "articles:detail" slug="hello-world" %}'>Hello world article</a>
+    {% endcomment %}
     <a href='{% url "recipes:list" %}'>Recipes</a>
+    <a href='{% url "articles:create" %}'>Create Article</a>
     <a href='{% url "recipes:create" %}'>Create Recipes</a>
+    <a href='{% url "register" %}'>Register</a>
+    <a href='{% url "login" %}'>Login</a>
     <form action='/articles/' method='GET'>
       <input type='text' name='q'/>
       <input type='submit' />
