--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head> 
-
+    
+    <script src="https://unpkg.com/htmx.org@1.5.0"></script>
+    {% load static %}
+    <link type="text/css" href="{% static 'style.css' %}" rel="stylesheet">
 
   </head>
   <body>
