--- a/templates/recipes/create-update.html
+++ b/templates/recipes/create-update.html
@@ -1,25 +1,48 @@
-{% extends "base.html" %} 
+{% extends "base.html" %}
+
 
 {% block content %}
 
-{% if message %}
+<style>
+    .ingredient-form {
+        border-bottom: 1px solid black;
+    }
+    .hidden {
+        display: none
+    }
+</style>
 
-<p>{{ message }}
-
-{% endif %}
-
-<div style='margin-top:30px'>
-<form action='.' method ="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-
-    {% if formset %}
-    <h3>Incredients</h3>
-    {{ formset.as_p }}
-
-    {% endif %}
-    <button style='margin-top:10px;' type='submit'>Save</button>
-</form>
+<div style='margin-top:30px;'>
+    {% include 'recipes/partials/forms.html' %}
 </div>
+
+<script>
+    
+    const addMoreBtn = document.getElementById('add-more')
+    const totalNewForms = document.getElementById('id_form-TOTAL_FORMS')
+    
+    addMoreBtn.addEventListener('click', add_new_form)
+    function add_new_form(event) {
+        if (event) {
+            event.preventDefault()
+        }
+        const currentIngredientForms = document.getElementsByClassName('ingredient-form')
+        const currentFormCount = currentIngredientForms.length // + 1
+        const formCopyTarget = document.getElementById('ingredient-form-list')
+        const copyEmptyFormEl = document.getElementById('empty-form').cloneNode(true)
+        copyEmptyFormEl.setAttribute('class', 'ingredient-form')
+        copyEmptyFormEl.setAttribute('id', `form-${currentFormCount}`)
+        const regex = new RegExp('__prefix__', 'g')
+        copyEmptyFormEl.innerHTML = copyEmptyFormEl.innerHTML.replace(regex, currentFormCount)
+        totalNewForms.setAttribute('value', currentFormCount + 1)
+        // now add new empty form element to our html form
+        formCopyTarget.append(copyEmptyFormEl)
+    }
+    
+
+
+</script>
+
+
 
 {% endblock content %}
