--- a/templates/recipes/detail.html
+++ b/templates/recipes/detail.html
@@ -1,23 +1,10 @@
-{% extends "base.html" %} 
+{% extends "base.html" %}
+
 
 {% block content %}
 
-{% comment %}
-
- This is the detail view
- The context is called 'object' in the recipe_detail_view() in the recipes/view.py
-Therefore object.name, object.description, etc.
-
-{% endcomment %}
-
-<h1>{{ object.name }} {% if object.get_edit_url %}<small><a href='{{ object.get_edit_url }}'>Edit</a></small>{% endif %}</h1>
-<p>{{ object.description }}</p>
-<p>{{ object.directions }}</p>
-
-{% for ingredient in object.get_ingredients_children %}
-<h1>{{ ingredient.name }}</h1>
-<p>{{ ingredient.as_imperial }}</p>
-<p>{{ ingredient.as_mks}}</p>
-{% endfor %}
+<div hx-get='{{ hx_url }}' hx-trigger='revealed'>
+    <div class='htmx-indicator'>Loading...</div>
+</div>
 
 {% endblock content %}
