add delete view, used htmx

--- a/templates/recipes/partials/ingredient-inline.html
+++ b/templates/recipes/partials/ingredient-inline.html
@@ -1,4 +1,11 @@
 <div id='ingredient-{{ object.id }}'>
     {{object.quantity}} {{object.unit}} - {{ object.name }} 
     <button hx-trigger='click' hx-get='{{ object.get_hx_edit_url }}' hx-target='#ingredient-{{ object.id }}'>Edit</button>
+    <a 
+        hx-post='{{ object.get_delete_url }}'
+        hx-trigger='click'
+        hx-confirm='Delete ingredient?'
+        hx-target='#ingredient-{{ object.id }}'
+        hx-swap='outerHTML'
+        href='{{ object.get_delete_url }}'>Remove</a>
 </div>
