--- a/templates/recipes/partials/forms.html
+++ b/templates/recipes/partials/forms.html
@@ -35,5 +35,6 @@
     {% if message %}
     <p>{{ message }}</p>
     {% endif %}
+    <a href='{{ object.get_delete_url }}'>Delete</a>
 </form>
 </div>
