commented out the css file that strips all css off

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,9 @@
         
 
     </style>
-    <link type="text/css" href="{% static 'style.css' %}" rel="stylesheet">
+    {% comment %}
+    <!-- <link type="text/css" href="{% static 'style.css' %}" rel="stylesheet"> -->
+    {% endcomment %}
 
   </head>
   <body>
