--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,11 @@
     <a href='{% url "articles:create" %}'>Create Article</a>
     <!-- <a href='{% url "recipes:create" %}'>Create Recipes</a> -->
     <a href='{% url "register" %}'>Register</a>
+    {% if request.user.is_authenticated %}
+    <a href='{% url "logout" %}'>Logout</a>
+    {% else %}
     <a href='{% url "login" %}'>Login</a>
+    {% endif %}
     
     {% block content %} {% endblock content %}
       <script>
