--- a/templates/home-view.html
+++ b/templates/home-view.html
@@ -2,19 +2,16 @@
 
 {% block content %}
 
-<h1>{{title}}! ({{id}})</h1>
-<p>{{content}}!</p>
-
-
-<a href='{% url "article-create" %}'>Create Article</a>
-<a href='{% url "article-detail" slug="hello-world" %}'>Hello world article</a>
-<ul>
-  {% for x in article %}
-</ul>
-{% if x.title %}
-<li><a href='{{ x.get_absolute_url }}'>{{x.title }} - {{ x.content }}</a></li>
-
-{% endif %} 
-{% endfor %} 
+<h1 class="font-extrabold text-2xl py-2 px-1">Eat plants. It's easy.</h1>
+<p class="px-5 py-2">We need everyone's help to reduse and eliminate our need for meat and all animal products. We can make change and it is our time to act.
+Here at the eat plants only project we want to teach and educate on being better everyday, as practically as we can, and as educated as we can. The Eat Plants Only Project wants to promote veganism
+      and the immense benefits it has. We want to promote what the human species does best - sit on our butts and eat all day. If you eat just plants alone - say RICE & BEANS,
+      NOT ONLY can you sit on your butt all day and not exercise, you'll still lose weight.
+      We sit on our butts and eat. Here we teach that you can do that with a plant based diet! A plant based diet has saved many lives of people
+      suffering with diabetes, cancer, cardiovascular disease, obesity, and many more. It has also been studied that meat, dairy, eggs, and fish cause
+      these diseases within the human body. We hope that a plant based diet can be the gateway to veganism, because that is the underlining
+      cause of so many planetary probems including the genocide of animals.
+    </p>
+</div>
 
 {% endblock content %}
