--- a/templates/accounts/logout.html
+++ b/templates/accounts/logout.html
@@ -5,8 +5,11 @@
 {% if request.user.is_authenticated %}
     <div style='margin-top:30px;'>
         <form method='POST'>{% csrf_token %}
+        <div class="text-gray-400 px-2 py-2">
         <p>Are you sure you want to logout?</p>
-        <button type='submit'>Yes, logout.</button>
+        <a href='/'>No, go back.</a>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" type="subtmit">Yes, logout.</button>
+        </div>
         </form>
     </div>
 {% else %}
