--- a/templates/base.html
+++ b/templates/base.html
@@ -1,18 +1,191 @@
 <!DOCTYPE html>
-<html>
-  <head> 
+<html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script
+      src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.3.5/dist/alpine.min.js"
+      defer>
+    </script>
+    <script src="//unpkg.com/alpinejs" defer></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/htmx.org@1.5.0"></script>
+    <style>
+        
+    </style>
+<script>
+    document.body.addEventListener('htmx:afterRequest', function (evt) {
+  const targetError = evt.target.attributes.getNamedItem('hx-target-error')
+  if (evt.detail.failed && targetError) {
+    document.getElementById(targetError.value).style.display = "inline";
+  }
+});
+document.body.addEventListener('htmx:beforeRequest', function (evt) {
+  const targetError = evt.target.attributes.getNamedItem('hx-target-error')
+  if (targetError) {
+    document.getElementById(targetError.value).style.display = "none";
+  }
+});
+</script>
+    {% comment %}
+    <!-- <link type="text/css" href="{% static 'style.css' %}" rel="stylesheet"> -->
+    {% endcomment %}
+    {% comment %}
+    This is an href example calling articles object
+    <a href='{% url "articles:detail" slug="hello-world" %}'>Hello world article</a>
+    
+    {% if request.user.is_authenticated %}
+    <a href='{% url "users:logout" %}'>Logout</a>
+    {% else %}
+    <a href='{% url "users:login" %}'>Login</a>
+    {% endif %}
 
+    This is the search bar to search articles and recipes.
+    <div class="text-gray-900 space-x-4">
+      {% include 'search/search-form.html' %}
+    </div
+
+
+    {% endcomment %}
 
   </head>
-  <body>
-    <h1>Hello World</h1>
-    <h3>Hello test</h3>
-    <p>Cant get on git</p>
-    <p>Final change, yeah right lol</p>
-    <form action='/articles/' method='GET'>
-      <input type='text' name='q'/>
-      <input type='submit' />
-    </form>
-    {% block content %} {% endblock content %}
-  </body>
+      <!-- NavBar -->
+      <nav id="nav-bar" class="bg-gray-700">
+        <div class="px-8 mx-auto">
+          <div class="flex justify-between">
+        
+          
+          <div class="flex space-x-4 text-gray-200">
+            <!-- logo -->
+            <div>
+              <a href="{% url 'home' %}" class="flex items-center py-2 px-2">
+                <svg class="w-10 h-10 mr-1 text-green-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M6.115 5.19l.319 1.913A6 6 0 008.11 10.36L9.75 12l-.387.775c-.217.433-.132.956.21 1.298l1.348 1.348c.21.21.329.497.329.795v1.089c0 .426.24.815.622 1.006l.153.076c.433.217.956.132 1.298-.21l.723-.723a8.7 8.7 0 002.288-4.042 1.087 1.087 0 00-.358-1.099l-1.33-1.108c-.251-.21-.582-.299-.905-.245l-1.17.195a1.125 1.125 0 01-.98-.314l-.295-.295a1.125 1.125 0 010-1.591l.13-.132a1.125 1.125 0 011.3-.21l.603.302a.809.809 0 001.086-1.086L14.25 7.5l1.256-.837a4.5 4.5 0 001.528-1.732l.146-.292M6.115 5.19A9 9 0 1017.18 4.64M6.115 5.19A8.965 8.965 0 0112 3c1.929 0 3.716.607 5.18 1.64" />
+                </svg>
+                <span class="font-bold hover:text-gray-400">100% Vegan</span>
+              </a>
+            </div>
+            <!-- primary nav -->
+            <div hx-boost="true" class="hidden md:flex flex items-center space-x-1 text-gray-100">
+              <a href="{% url "articles:search" %}" class=" py-4 px-3 hover:text-gray-400"
+              hx-trigger="click"
+              hx-target="#content"
+              hx-swap="innerHTML"
+              >Articles</a>
+              <a href="{% url "recipes:list" %}" class=" py-4 px-3 hover:text-gray-400"
+              hx-trigger="click"
+              hx-target="#content"
+              hx-swap="innerHTML"
+              >Recipes</a>
+              <a href="{% url "whyvegan" %}" class=" py-4 px-3 hover:text-gray-400"
+              hx-trigger="click"
+              hx-target="#content"
+              hx-swap="innerHTML"
+              >Why Vegan?</a>
+            </div>
+          </div>
+          
+          <!-- secondary nav -->
+            <div class="hidden md:flex flex items-center space-x-1">
+            <div>
+            {% if request.user.is_authenticated %}
+            <a href="{% url "users:logout" %}" class="py-4 px-3 text-gray-100 hover:text-gray-400" 
+              id="navbar-login-button"
+              hx-post="/logout/"
+              hx-trigger="click"
+              hx-target="#content"
+              hx-swap="innerHTML"
+            >Logout</a>
+            {% else %}    
+              <a href="{% url "users:login" %}" class="py-4 px-3 text-gray-100 hover:text-gray-400"
+                id="navbar-login-button"
+                hx-get="/login"
+                hx-trigger="click"
+                hx-target="#content"
+                hx-swap="innerHTML"
+              >Login</a>
+            {% endif %}
+            </div>
+              <a href="{% url "users:register" %}" 
+                class=" py-2 px-3 text-gray-700 bg-yellow-400 text-yellow-900 rounded transition duration-300 hover:bg-yellow-300 hover:text-yellow-800"
+                hx-get="/register"
+                hx-trigger="click"
+                hx-target="#content"
+                hx-swap="innerHTML"
+                >Sign Up</a>
+            </div>
+            
+            <!-- mobile button goes here-->
+            <div class="md:hidden flex items-center">
+              <button class="mobile-menu-button">
+              <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+              </svg>
+            </button>
+            </div>
+      </nav>
+
+      <!-- mobile menu -->
+      <div class="mobile-menu hidden md:hidden bg-gray-700">
+        <a href="{% url "articles:search" %}" class="block py-4 px-3 text-sm text-white hover:text-gray-300">Articles</a>
+        <a href="{% url "recipes:list" %}" class="block py-4 px-3 text-sm text-white hover:text-gray-300">Recipes</a>
+        <a href="{% url "recipes:list" %}" class="block py-4 px-3 text-sm text-white hover:text-gray-300">Why Vegan?</a>
+      </div>
+  
+
+    <body class="h-screen flex flex-col justify-between bg-[#70A288]">
+    {% comment %} <div id="articles" class="container mx-auto bg-[#04151F] rounded-3xl text-gray-200 px-4"> {% endcomment %}
+
+    <div hx-ext="multi-swap" id="content" hx-swap-oob="true" class="container mx-auto bg-[#04151F] rounded-3xl text-gray-200 px-4 py-2">
+      {% block content %} {% endblock content %}
+    </div>
+
+    <div id="articles" class="container mx-auto bg-[#04151F] rounded-3xl text-gray-800 px-4">
+    
+    </div>
+
+    {% comment %} <div id="content" class="container mx-auto bg-[#04151F] rounded-3xl text-gray-200 px-4">
+    
+    </div> {% endcomment %}
+
+    <script>
+      const mobileMenuButton = document.querySelector('.mobile-menu-button');
+      const mobileMenu = document.querySelector('.mobile-menu');
+      mobileMenuButton.addEventListener('click', () => {
+        mobileMenu.classList.toggle('hidden');
+      });
+      document.body.addEventListener("htmx:configRequest", (event)=>{
+        event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}'
+      })
+    </script>
+
+<!-- footer -->
+<footer class="p-4 shadow md:px-6 md:py-8 bg-gray-700 text-white font-mono position:sticky top-[100vh]">
+    <div class="sm:flex sm:items-center sm:justify-between">
+        <a href="https://flowbite.com/" class="flex items-center mb-4 sm:mb-0">
+            <svg class="w-10 h-10 mr-1 text-green-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M6.115 5.19l.319 1.913A6 6 0 008.11 10.36L9.75 12l-.387.775c-.217.433-.132.956.21 1.298l1.348 1.348c.21.21.329.497.329.795v1.089c0 .426.24.815.622 1.006l.153.076c.433.217.956.132 1.298-.21l.723-.723a8.7 8.7 0 002.288-4.042 1.087 1.087 0 00-.358-1.099l-1.33-1.108c-.251-.21-.582-.299-.905-.245l-1.17.195a1.125 1.125 0 01-.98-.314l-.295-.295a1.125 1.125 0 010-1.591l.13-.132a1.125 1.125 0 011.3-.21l.603.302a.809.809 0 001.086-1.086L14.25 7.5l1.256-.837a4.5 4.5 0 001.528-1.732l.146-.292M6.115 5.19A9 9 0 1017.18 4.64M6.115 5.19A8.965 8.965 0 0112 3c1.929 0 3.716.607 5.18 1.64" />
+            </svg>
+            <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">100% Vegan</span>
+        </a>
+        <ul class="flex flex-wrap items-center mb-6 text-sm text-white sm:mb-0">
+            <li>
+                <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
+            </li>
+            <li>
+                <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
+            </li>
+            <li>
+                <a href="#" class="mr-4 hover:underline md:mr-6 ">Licensing</a>
+            </li>
+            <li>
+                <a href="#" class="hover:underline">Contact</a>
+            </li>
+        </ul>
+    </div>
+    <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+    <span class="block text-sm text-white sm:text-center">© 2022 <a href="https://corpjuk.dev/" class="hover:underline">100% Vegan</a>. All Rights Reserved.
+    </span>
+</footer>
+    
+</body>
 </html>
