--- a/templates/base.html
+++ b/templates/base.html
@@ -139,6 +139,16 @@ document.body.addEventListener('htmx:beforeRequest', function (evt) {
       {% block content %} {% endblock content %}
     </div>
 
+ 
+
+    {% comment %} Recipe Div Below {% endcomment %}
+
+    <div id="recipes" class="container mx-auto bg-[#04151F] rounded-3xl text-gray-200 px-4">
+    
+    </div>
+
+    {% comment %} Articles Div below {% endcomment %}
+
     <div id="articles" class="container mx-auto bg-[#04151F] rounded-3xl text-gray-200 px-4">
     
     </div>
