--- a/templates/recipes/detail.html
+++ b/templates/recipes/detail.html
@@ -1,12 +1,44 @@
-{% comment %} {% extends "base.html" %} {% endcomment %}
-
+{% extends "base.html" %}
 
 {% block content %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-28hTzTj+YrFTcPPio7h3q3jzVwALsQsB+kDXtAUjQOfrhV7YFCqb20ZeuV7/dHjJR0aHRwzCxlF/bfV7ahDkHw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+{% comment %} Script empties #content-container-1 so it is no longer truthy {% endcomment %}
+{% comment %} <script>
+    document.getElementById("content-container-1").innerHTML = "";
+</script> {% endcomment %}
 
-<div hx-get='{{ hx_url }}' hx-trigger='revealed'>
-    <div class='htmx-indicator'>Loading...</div>
+<!-- Previous and Next Arrows -->
+
+<div hx-boost="true">
+<a href="{{ previous.get_hx_url }}" hx-get="{{ previous.get_hx_url }}" hx-target="#content-container-2" hx-swap="innerHTML" id="prev-button" class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+  <i class="fas fa-chevron-left mr-2"></i>
+  Previous
+</a>
+
+<a href="{{ next.get_hx_url }}" hx-get="{{ next.get_hx_url }}" hx-target="#content-container-2" hx-swap="innerHTML" id="next-button" class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+  Next
+  <i class="fas fa-chevron-right ml-2"></i>
+</a>
+
+
+<div class="container mx-auto px-4 py-8">
+  <div class="mb-8">
+    <h1 class="font-extrabold text-gray-300 text-2xl">{{ object.name }}</h1>
+    {% if object.get_edit_url %}
+    <div class="text-sm mt-1">
+      <a href='{{ object.get_edit_url }}' class="text-blue-500 mr-4 hover:underline">Edit</a>
+      <a href='{{ object.get_delete_url }}' 
+        hx-post='{{ object.get_delete_url }}' 
+        hx-confirm='Are you sure you want to delete {{ object.name }}?'
+        hx-trigger='click'
+        class="text-red-500 hover:underline"
+      >Delete</a>
+    </div>
+    {% endif %}
+  </div>
+  
+  {% include 'recipes/partials/detail.html' %}
+
 </div>
-
-
-
+</div>
 {% endblock content %}
