--- a/templates/whyvegan.html
+++ b/templates/whyvegan.html
@@ -1,6 +1,6 @@
 {% comment %} {% extends "base.html" %} {% endcomment %}
 
-{% block content %}
+{% comment %} {% block content %}
 
 <h1 class="font-extrabold text-2xl py-2 px-1">Why vegan?</h1>
 <p class="py-2 px-1">Welcome to 100% Vegan. Veganism is a moral obligation.</p>
@@ -20,4 +20,65 @@
 
 </div>
 
-{% endblock content %}
+{% endblock content %} {% endcomment %}
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Website</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.1.2/tailwind.min.css">
+</head>
+
+<!-- Scripts -->
+<script src="https://unpkg.com/htmx.org@1.5.0"></script>
+
+<body class="bg-gray-700 flex flex-col min-h-screen">
+
+<!-- Navigation Bar -->
+<nav hx-boost="true" class="bg-gray-800 py-2">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="flex justify-between h-16">
+            <div class="flex-shrink-0 flex items-center">
+                <a href="{% url "home" %}" class="text-white font-bold text-xl">100% Vegan</a>
+            </div>
+            <div class="hidden md:block">
+                <div class="ml-10 flex items-center space-x-4 h-full">
+                    <a href="{% url "articles" %}" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
+                        hx-trigger="click"
+                        hx-target="#content-container-1"
+                        hx-swap="innerHTML"
+                    >Articles</a>
+                    <a href="{% url "recipes:list" %}" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
+                        hx-trigger="click"
+                        hx-target="#content-container-1"
+                        hx-swap="innerHTML"
+                    >Recipes</a>
+                    <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">About</a>
+                    <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Contact</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
+
+    <!-- Body -->
+    <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8 flex-grow">
+        <div id="content-container-1" class="container mx-auto bg-[#04151F] rounded-3xl text-gray-200 px-4">
+    </div>
+            <div id="content-container-2" class="px-4 py-6 sm:px-0">
+                
+            </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="bg-gray-800 mt-auto py-4">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between text-gray-300 text-sm">
+                <p>&copy; 2023 My Website. All Rights Reserved.</p>
+                <p>Privacy Policy | Terms of Use</p>
+            </div>
+        </div>
+    </footer>
+
+</body>
+</html>
