working on htmx, urls, views, etc.

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% comment %} {% extends "base.html" %} {% endcomment %}
 
 {% block content %}
-  <div hx-boost="true">
+  <div hx-boost="true" class="flex-1 px-4 py-8">
     <h1 class="font-extrabold text-2xl py-2 px-4">About Us</h1>
 
     <p class="py-2 px-4">We are a team of passionate vegans who believe that adopting a vegan lifestyle is the best thing you can do for your health, the environment, and animals. Our goal is to provide you with all the information you need to make the transition to a vegan lifestyle easy and enjoyable.</p>
