--- a/templates/recipes/list.html
+++ b/templates/recipes/list.html
@@ -1,5 +1,5 @@
 {% block content %}
-<div class="px-4 py-8">
+<div class="flex-1 px-4 py-8">
   <h1 class="font-bold text-3xl mb-4">Vegan Recipes</h1>
 
   <p class="mb-4">
